Fixed image alignment issues and problem with restaurant js file img description

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ nav h1 a {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
 }
 #restaurants-list li {
